more cosmetic changes